<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">СМСненадо</string>
    <string name="service_name">СМСненадо (сервис)</string>
    <string name="started">Сервис СМСненадо запущен</string>
    <string name="works">Работает</string>
    <string name="new_report">Новая заявка о спаме</string>
    <string name="subscription_agreed">Ранее я давал согласие на эту СМС-рассылку</string>
    <string name="sms_sent_to">Отправлено на</string>
    <string name="sms_received_on_this_date">Пришло</string>
    <string name="sms_received_from">Пришло от</string>
    <string name="text_of_sms">Текст сообщения</string>
    <string name="send_report">Отправить</string>
    <string name="settings">Настройки</string>
    <string name="setup_your_phone_numbers">Номера телефонов</string>
    <string name="add_or_edit">Добавить/изменить</string>
    <string name="only_via_wifi">Работать только через Wi-Fi</string>
    <string name="mark_as_read_new_spam">Помечать спам как прочитанный</string>
    <string name="mark_as_read_confirmations">Помечать подтверждения от сервиса прочитанными</string>
    <string name="your_email_for_results">E-mail для получения результатов</string>
    <string name="save">Сохранить</string>
    <string name="your_phone_number">Ваш номер мобильного</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="remove_phone_number">Удалить</string>
    <string name="edit_phone_number">Изменить номер</string>
    <string name="hide_confirmations">Прятать СМС от СМСненадо</string>
    <string name="hide_messages_from_contact_list">Не показывать сообщения людей из адресной книги</string>
    <string name="show_send_confirmation_dialog">Перед отправкой спросить подтверждение</string>
    <string name="updated_email_automatically">Ваш E-mail — «%s». Можно изменить в Настройках.</string>
    <string name="my_email">Мой E-mail</string>
    <string name="hint_add_user_phone_numbers">Необходимо добавить Ваш номер телефона.\nЕсли Вы используете несколько SIM-карт — добавьте несколько номеров.</string>
    <string name="cannot_detect_phone_number">Не удалось определить Ваш номер телефона.</string>
    <string name="you_need_to_set_phone_number">Необходимо добавить номер телефона.</string>
    <string name="cannot_detect_email">Не удалось определить Ваш E-mail.</string>
    <string name="you_need_to_set_email">Необходимо ввести E-mail вручную для получения результата подачи заявок.</string>
    <string name="invalid_email">Неверно введен E-mail адрес. Пожалуйста попробуйте ввести еще раз.</string>
    <string name="ok">OK</string>
    <string name="yes">Да!</string>
    <string name="no">Нет</string>
    <string name="invalid_phone_number">Неверный номер. Поддерживаются только российские номера. Пример: 71234567890</string>
    <string name="necessary_to_set">Необходимо задать!</string>
    <string name="phone_number_exists">Такой номер уже существует</string>
    <string name="title_about_program">О программе СМСненадо</string>
    <string name="about_program0">СМСненадо — социальный сервис, позволяющий отписаться от рекламных СМС рассылок.\nСервис принадлежит ЗАО «Вендософт». Условия предоставления услуги: http://www.smsnenado.ru/agreement.html\nПрограмма распространяется на условиях лицензии BSD-2: https://github.com/sbar/smsnenado/blob/master/COPYING</string>
    <string name="about_program1">\nКлиент для Android</string>
    <string name="about_program2">\nРазработчик</string>
    <string name="about_program3">Александр Лопатин</string>
    <string name="about_program4">\nХудожник иконок</string>
    <string name="about_program5">Михаил Лопатин\n</string>
    <string name="this_sms_spam_wont_be_received">Одно из сообщений от этого адресата уже было помечено как спам. Сообщения от этого адресата автоматически помечаются как спам.</string>
    <string name="sms_in_internal_queue_need_net">Сообщение будет отправлено на обработку. Необходимо подключение к интернет.</string>
    <string name="sms_in_internal_queue">Сообщение отправляется на обработку...</string>
    <string name="sms_in_queue">Сообщение отправлено на обработку. Результат будет получен через E-mail.</string>
    <string name="sms_unsubscribed">Вы успешно отписались от этого адресата. Новые сообщения от него приходить не должны. Если новые сообщения всё же будут приходить — они автоматически будут отмечены как спам.</string>
    <string name="sms_fas_guide_sent">На Ваш E-mail отправлена инструкция по подаче жалобы в ФАС.</string>
    <string name="sms_guide_sent">На Ваш email отправлена инструкция по отписке от этого адресата.</string>
    <string name="sms_sent_to_fas">Жалоба по этому сообщению подана в ФАС.</string>
    <string name="not_a_spam">Не спам!</string>
    <string name="canceled_spam">Сообщения от выбранного адресата больше не являются спамом.</string>
    <string name="report_created">Создана заявка на выбранное сообщение.</string>
    <string name="report_created_need_network">Создана заявка на выбранное сообщение. Необходимо подключение к интернет для отправки заявки.</string>
    <string name="confirm_report_sending">Отправляем заявку?</string>
    <string name="help_project">Домашняя страница</string>
    <string name="url_help_project">http://sbar.github.io/smsnenado/ru.html</string>
    <string name="cant_send_too_frequent">Нельзя создавать заявку по одному и тому же отправителю чаще раза в неделю</string>
    <string name="no_messages">Нет сообщений</string>
    <string name="not_found">Не найдено</string>
    <string name="loading">Загрузка</string>
    <string name="title_in_this_version">В этой версии...</string>
    <string name="in_this_version">\n- Добавлена тёмная тема оформления\n- Баннер перенесен на главный экран\n- Исправлены баги\n- Обновлены библиотеки\n</string>
    <string name="confirm_not_spam">Действительно не спам?</string>
    <string formatted="false" name="report_spam_failed">Невозможно создать заявку по адресату «%s». Ошибка %d: «%s». Проверьте настройки программы и попробуйте еще раз.</string>
    <string name="remove_all_sender_messages">Удалить все сообщения этого отправителя</string>
    <string name="last_messages">Сообщения</string>
    <string name="removed_messages">Корзина</string>
    <string name="remove_sender_messages_by_default">По-умолчанию удалять все сообщения спам-отправителя</string>
    <string name="use_dark_theme">Тёмное оформление</string>
    <string name="app_restart_needed">Перезапустите приложение</string>
    <string name="add_to_white_list">В белый список</string>
    <string name="confirm_add_to_white_list">Добавить адресат «%s» в белый список?</string>
    <string name="added_to_white_list">Адресат «%s» добавлен в белый список</string>
    <string name="hide_messages_from_white_list">Использовать белый список</string>
</resources>
