<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="user_email"
        android:title="@string/your_email_for_results"
        android:defaultValue=""
        android:summary="@string/necessary_to_set"
        />
    <Preference android:title="@string/setup_your_phone_numbers">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.sbar.smsnenado"
            android:targetClass="com.sbar.smsnenado.EditUserPhoneNumbersActivity"
            />
    </Preference>
    <CheckBoxPreference
        android:key="only_via_wifi"
        android:summary="@string/only_via_wifi"
        android:defaultValue="false"
        />
    <!-- CheckBoxPreference
        android:key="mark_as_read_new_spam"
        android:title="@string/mark_as_read_new_spam"
        android:defaultValue="true"
        / -->
    <!-- CheckBoxPreference
        android:key="mark_as_read_confirmations"
        android:title="@string/mark_as_read_confirmations"
        android:defaultValue="true"
        / -->
    <CheckBoxPreference
        android:key="hide_confirmations"
        android:summary="@string/hide_confirmations"
        android:defaultValue="true"
        />
    <CheckBoxPreference
        android:key="hide_messages_from_contact_list"
        android:summary="@string/hide_messages_from_contact_list"
        android:defaultValue="true"
        />
    <CheckBoxPreference
        android:key="show_send_confirmation_dialog"
        android:summary="@string/show_send_confirmation_dialog"
        android:defaultValue="true"
        />
</PreferenceScreen>
