<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <Button
        android:id="@+id/setupYourPhoneNumbers_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_your_phone_numbers"
        android:minHeight="64dp"
        android:gravity="center_vertical"
        />
    <CheckBox
        android:id="@+id/onlyViaWiFi_CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_via_wifi"
        android:minHeight="64dp"
        android:gravity="center_vertical"
        />
    <CheckBox
        android:id="@+id/markAsReadNewSpam_CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark_as_read_new_spam"
        android:minHeight="64dp"
        android:gravity="center_vertical"
        />
    <CheckBox
        android:id="@+id/markAsReadConfirmations_CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark_as_read_confirmations"
        android:minHeight="64dp"
        android:gravity="center_vertical"
        />
    <CheckBox
        android:id="@+id/hideConfirmations_CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hide_confirmations"
        android:minHeight="64dp"
        android:gravity="center_vertical"
        />
    <EditText
        android:id="@+id/email_EditText"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email_for_results"
        android:minHeight="64dp"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:minHeight="64dp"
        android:gravity="center_vertical"
        />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/saveSettings_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:minWidth="128dp"
            android:minHeight="64dp"
            />
        <Button
            android:id="@+id/goBack_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            />
    </LinearLayout>
</LinearLayout>
