<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="64dp"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Main"
        >
        <TextView
            style="@style/Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/sms_sent_to"
            />
        <Button
            android:id="@+id/userPhoneNumber_Button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:layout_weight="1"
            android:gravity="right"
            />
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/sms_received_on_this_date"
            android:gravity="center_vertical"
            />
        <TextView
            android:id="@+id/smsDate_TextView"
            style="@style/Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/sms_received_from"
            />
        <TextView
            android:id="@+id/smsAddress_TextView"
            style="@style/Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/text_of_sms"
            />
        <TextView
            android:id="@+id/smsText_TextView"
            style="@style/Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            />
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:text="@string/my_email"
            />
        <TextView
            android:id="@+id/userEmail_TextView"
            style="@style/Main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <CheckBox
        android:id="@+id/subscriptionAgreed_CheckBox"
        Button="@style/Main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscription_agreed"
        android:minHeight="64dp"
        />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/sendReport_Button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_report"
            android:drawableLeft="@drawable/ic_launcher"
            android:drawablePadding="9dp"
            />
        <Button
            android:id="@+id/goBack_Button"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            />
    </LinearLayout>
</LinearLayout>
